Jackson 3 migration